--- a/docs/docsets/Ombi.docset/Contents/Resources/Documents/css/jazzy.css
+++ b/docs/docsets/Ombi.docset/Contents/Resources/Documents/css/jazzy.css
@@ -7,18 +7,16 @@ html, body, div, span, h1, h3, h4, p, a, code, em, img, ul, li, table, tbody, tr
   vertical-align: baseline; }
 
 body {
-  background-color: #fff;
-  font-family: -apple-system, Helvetica, freesans, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.6;
+  background-color: #f2f2f2;
+  font-family: Helvetica, freesans, Arial, sans-serif;
+  font-size: 14px;
   -webkit-font-smoothing: subpixel-antialiased;
-  word-wrap: break-word;
-  min-height: 100vh; }
+  word-wrap: break-word; }
 
 h1, h2, h3 {
   margin-top: 0.8em;
   margin-bottom: 0.3em;
-  font-weight: 400;
+  font-weight: 100;
   color: black; }
 
 h1 {
@@ -40,20 +38,26 @@ h6 {
   font-size: 1.1em;
   color: #777; }
 
-@media screen and (max-width: 767px) {
-  h1 {
-    font-size: 1.75em; }
-  h2 {
-    font-size: 1.4em; } }
+.section-name {
+  color: gray;
+  display: block;
+  font-family: Helvetica;
+  font-size: 22px;
+  font-weight: 100;
+  margin-bottom: 15px; }
 
 pre, code {
-  font-family: "SF Mono", Menlo, monospace;
-  font-size: 0.95em;
+  font: 0.95em Menlo, monospace;
   color: #777;
   word-wrap: normal; }
 
-pre {
-  line-height: 1.6; }
+p code, li code {
+  background-color: #eee;
+  padding: 2px 4px;
+  border-radius: 4px; }
+
+pre > code {
+  padding: 0; }
 
 a {
   color: #0088cc;
@@ -82,42 +86,19 @@ hr {
 
 .footnote-ref {
   display: inline-block;
-  scroll-margin-top: 87px; }
+  scroll-margin-top: 70px; }
 
 .footnote-def {
-  scroll-margin-top: 87px; }
+  scroll-margin-top: 70px; }
 
 .content-wrapper {
   margin: 0 auto;
-  width: calc(100% - 32px);
-  max-width: 980px; }
-
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  min-height: inherit;
-  overflow: auto; }
-
-.article-wrapper > *,
-.nav-wrapper > *,
-.footer-wrapper > * {
-  margin: 0 auto;
-  width: calc(100% - 32px);
-  max-width: 980px; }
-
-.article-wrapper {
-  flex: 1;
-  background-color: #fff; }
-
-.nav-wrapper {
-  background-color: #fafafa; }
-
-.footer-wrapper {
-  background-color: #f2f2f2; }
+  width: 980px; }
 
 header {
-  line-height: 48px;
-  background-color: #2C2C2C;
+  font-size: 0.85em;
+  line-height: 32px;
+  background-color: #414141;
   position: fixed;
   width: 100%;
   z-index: 3; }
@@ -134,86 +115,87 @@ header {
     float: right;
     margin-left: 16px; }
 
-#breadcrumbs-container {
-  background-color: #2C2C2C;
-  position: fixed;
-  z-index: 2;
-  width: 100%; }
-
 #breadcrumbs {
-  color: rgba(255, 255, 255, 0.6);
-  height: 29px;
-  padding-bottom: 10px;
+  background-color: #f2f2f2;
+  height: 21px;
+  padding-top: 17px;
+  position: fixed;
   width: 100%;
-  margin-top: 48px;
-  white-space: nowrap;
-  overflow-x: scroll; }
+  z-index: 2;
+  margin-top: 32px; }
   #breadcrumbs #carat {
     height: 10px;
     margin: 0 5px; }
-  #breadcrumbs a {
-    color: white; }
 
-@media screen and (max-width: 767px) {
-  #breadcrumbs {
-    color: white; } }
+.sidebar {
+  background-color: #f9f9f9;
+  border: 1px solid #e2e2e2;
+  overflow-y: auto;
+  overflow-x: hidden;
+  position: fixed;
+  top: 70px;
+  bottom: 0;
+  width: 230px;
+  word-wrap: normal; }
 
 .nav-groups {
   list-style-type: none;
+  background: #fff;
   padding-left: 0; }
 
 .nav-group-name {
-  font-size: 1.5rem;
-  font-weight: 500;
-  padding: 20px 0; }
-  .nav-group-name:not(:last-child) {
-    border-bottom: 1px solid #e2e2e2; }
+  border-bottom: 1px solid #e2e2e2;
+  font-size: 1.1em;
+  font-weight: 100;
+  padding: 15px 0 15px 20px; }
   .nav-group-name > a {
     color: #333; }
 
 .nav-group-tasks {
-  column-count: 2;
-  list-style: none;
-  padding: 0;
   margin-top: 5px; }
 
 .nav-group-task {
-  font-size: 1.1rem;
-  font-weight: 400; }
+  font-size: 0.9em;
+  list-style-type: none;
+  white-space: nowrap; }
   .nav-group-task a {
     color: #888; }
 
-@media screen and (max-width: 767px) {
-  .nav-group-tasks {
-    column-count: 1; } }
-
 .main-content {
+  background-color: #fff;
+  border: 1px solid #e2e2e2;
+  margin-left: 246px;
+  position: absolute;
   overflow: hidden;
-  padding-bottom: 60px;
-  margin-top: 87px; }
+  padding-bottom: 20px;
+  top: 70px;
+  width: 734px; }
   .main-content p, .main-content a, .main-content code, .main-content em, .main-content ul, .main-content table, .main-content blockquote {
     margin-bottom: 1em; }
   .main-content p {
-    line-height: 1.5; }
-  .main-content section {
-    max-width: 750px; }
-    .main-content section .section:first-child {
-      margin-top: 0;
-      padding-top: 0; }
-    .main-content section .task-group-section .task-group:first-of-type {
-      padding-top: 10px; }
-      .main-content section .task-group-section .task-group:first-of-type .section-name {
-        padding-top: 15px; }
-    .main-content section .heading:before {
-      content: "";
-      display: block;
-      padding-top: 87px;
-      margin: -87px 0 0; }
+    line-height: 1.8em; }
+  .main-content section .section:first-child {
+    margin-top: 0;
+    padding-top: 0; }
+  .main-content section .task-group-section .task-group:first-of-type {
+    padding-top: 10px; }
+    .main-content section .task-group-section .task-group:first-of-type .section-name {
+      padding-top: 15px; }
+  .main-content section .heading:before {
+    content: "";
+    display: block;
+    padding-top: 70px;
+    margin: -70px 0 0; }
   .main-content .section-name p {
     margin-bottom: inherit;
     line-height: inherit; }
   .main-content .section-name code {
+    background-color: inherit;
+    padding: inherit;
     color: inherit; }
+
+.section {
+  padding: 0 25px; }
 
 .highlight {
   background-color: #eee;
@@ -230,24 +212,22 @@ header {
   border: none; }
 
 .section-name {
-  font-size: 1.5rem;
-  font-weight: 500;
-  margin: 0; }
+  margin: 0;
+  margin-left: 18px; }
 
 .task-group-section {
   margin-top: 10px;
+  padding-left: 6px;
   border-top: 1px solid #e2e2e2; }
 
 .task-group {
   padding-top: 0px; }
-  .task-group > ul {
-    padding-left: 0; }
 
 .task-name-container a[name]:before {
   content: "";
   display: block;
-  padding-top: 87px;
-  margin: -87px 0 0; }
+  padding-top: 70px;
+  margin: -70px 0 0; }
 
 .section-name-container {
   position: relative;
@@ -273,8 +253,8 @@ header {
   .item a[name]:before {
     content: "";
     display: block;
-    padding-top: 87px;
-    margin: -87px 0 0; }
+    padding-top: 70px;
+    margin: -70px 0 0; }
   .item code {
     background-color: transparent;
     padding: 0; }
@@ -282,18 +262,20 @@ header {
     display: inline-block;
     text-indent: -20px;
     padding-left: 3px;
-    margin-left: 55px;
+    margin-left: 35px;
+    font-size: 11.9px;
     transition: all 300ms; }
+  .item .token-open {
+    margin-left: 20px; }
   .item .discouraged {
     text-decoration: line-through; }
-  .item .token-open {
-    margin-left: 45px; }
   .item .declaration-note {
     font-size: .85em;
     color: gray;
     font-style: italic; }
 
 .pointer-container {
+  border-bottom: 1px solid #e2e2e2;
   left: -23px;
   padding-bottom: 13px;
   position: relative;
@@ -315,17 +297,19 @@ header {
 
 .height-container {
   display: none;
+  left: -25px;
+  padding: 0 25px;
   position: relative;
   width: 100%;
   overflow: hidden; }
   .height-container .section {
-    position: relative;
     background: #f9f9f9;
+    border-bottom: 1px solid #e2e2e2;
+    left: -25px;
+    position: relative;
     width: 100%;
-    padding: 10px 25px;
-    border: 1px solid #e2e2e2;
-    border-radius: 8px;
-    box-sizing: border-box; }
+    padding-top: 10px;
+    padding-bottom: 5px; }
 
 .aside, .language {
   padding: 6px 12px;
@@ -333,8 +317,7 @@ header {
   border-left: 5px solid #dddddd;
   overflow-y: hidden; }
   .aside .aside-title, .language .aside-title {
-    font-size: 12px;
-    font-weight: 600;
+    font-size: 9px;
     letter-spacing: 2px;
     text-transform: uppercase;
     padding-bottom: 0;
@@ -376,19 +359,20 @@ header {
   font-size: 0.9em; }
 
 #footer {
-  padding: 25px 0;
-  box-sizing: border-box; }
+  position: relative;
+  top: 10px;
+  bottom: 0px;
+  margin-left: 25px; }
   #footer p {
     margin: 0;
     color: #aaa;
     font-size: 0.8em; }
 
-html.dash header, html.dash #breadcrumbs {
+html.dash header, html.dash #breadcrumbs, html.dash .sidebar {
   display: none; }
 
 html.dash .main-content {
-  width: calc(100% - 32px);
-  max-width: 980px;
+  width: 980px;
   margin-left: 0;
   border: none;
   width: 100%;
@@ -407,6 +391,45 @@ html.dash .content-wrapper {
 html.dash #footer {
   position: static; }
 
-@media screen and (max-width: 767px) {
-  .no-mobile {
-    display: none; } }
+form[role=search] {
+  float: right; }
+  form[role=search] input {
+    font: Helvetica, freesans, Arial, sans-serif;
+    margin-top: 6px;
+    font-size: 13px;
+    line-height: 20px;
+    padding: 0px 10px;
+    border: none;
+    border-radius: 1em; }
+    .loading form[role=search] input {
+      background: white url(../img/spinner.gif) center right 4px no-repeat; }
+  form[role=search] .tt-menu {
+    margin: 0;
+    min-width: 300px;
+    background: #fff;
+    color: #333;
+    border: 1px solid #e2e2e2;
+    z-index: 4; }
+  form[role=search] .tt-highlight {
+    font-weight: bold; }
+  form[role=search] .tt-suggestion {
+    font: Helvetica, freesans, Arial, sans-serif;
+    font-size: 14px;
+    padding: 0 8px; }
+    form[role=search] .tt-suggestion span {
+      display: table-cell;
+      white-space: nowrap; }
+    form[role=search] .tt-suggestion .doc-parent-name {
+      width: 100%;
+      text-align: right;
+      font-weight: normal;
+      font-size: 0.9em;
+      padding-left: 16px; }
+  form[role=search] .tt-suggestion:hover,
+  form[role=search] .tt-suggestion.tt-cursor {
+    cursor: pointer;
+    background-color: #4183c4;
+    color: #fff; }
+  form[role=search] .tt-suggestion:hover .doc-parent-name,
+  form[role=search] .tt-suggestion.tt-cursor .doc-parent-name {
+    color: #fff; }
